<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>JEngine</groupId>
    <artifactId>VEngine</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>

        <java.version>17</java.version>
        <kotlin.version>1.5.31</kotlin.version>

        <lwjgl.version>3.2.3</lwjgl.version>
        <joml.version>1.10.1</joml.version>
        <lwjgl3-awt.version>0.1.8</lwjgl3-awt.version>
    </properties>

    <profiles>
        <profile><id>lwjgl-natives-linux-amd64</id><activation><os><family>unix</family><arch>amd64</arch></os></activation><properties><lwjgl.natives>natives-linux</lwjgl.natives></properties></profile>
        <profile><id>lwjgl-natives-macos-amd64</id><activation><os><family>mac</family><arch>amd64</arch></os></activation><properties><lwjgl.natives>natives-macos</lwjgl.natives></properties></profile>
        <profile><id>lwjgl-natives-windows-amd64</id><activation><os><family>windows</family><arch>amd64</arch></os></activation><properties><lwjgl.natives>natives-windows</lwjgl.natives></properties></profile>
    </profiles>

    <repositories>
        <repository>
            <id>sonatype-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <releases><enabled>false</enabled></releases>
            <snapshots><enabled>true</enabled></snapshots>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-bom</artifactId>
                <version>${lwjgl.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib-jdk8</artifactId>
            <version>${kotlin.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>

        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl</artifactId></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-assimp</artifactId></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-egl</artifactId></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-glfw</artifactId></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-jawt</artifactId></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-lz4</artifactId></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-meow</artifactId></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-nanovg</artifactId></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-nfd</artifactId></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-openal</artifactId></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-opencl</artifactId></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-opengl</artifactId></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-opus</artifactId></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-par</artifactId></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-shaderc</artifactId></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-stb</artifactId></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-tinyexr</artifactId></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-xxhash</artifactId></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-zstd</artifactId></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl</artifactId><classifier>${lwjgl.natives}</classifier></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-assimp</artifactId><classifier>${lwjgl.natives}</classifier></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-glfw</artifactId><classifier>${lwjgl.natives}</classifier></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-lz4</artifactId><classifier>${lwjgl.natives}</classifier></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-meow</artifactId><classifier>${lwjgl.natives}</classifier></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-nanovg</artifactId><classifier>${lwjgl.natives}</classifier></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-nfd</artifactId><classifier>${lwjgl.natives}</classifier></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-openal</artifactId><classifier>${lwjgl.natives}</classifier></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-opengl</artifactId><classifier>${lwjgl.natives}</classifier></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-opus</artifactId><classifier>${lwjgl.natives}</classifier></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-par</artifactId><classifier>${lwjgl.natives}</classifier></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-shaderc</artifactId><classifier>${lwjgl.natives}</classifier></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-stb</artifactId><classifier>${lwjgl.natives}</classifier></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-tinyexr</artifactId><classifier>${lwjgl.natives}</classifier></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-xxhash</artifactId><classifier>${lwjgl.natives}</classifier></dependency>
        <dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl-zstd</artifactId><classifier>${lwjgl.natives}</classifier></dependency>
        <dependency><groupId>org.joml</groupId><artifactId>joml</artifactId><version>${joml.version}</version></dependency>
        <dependency><groupId>org.lwjglx</groupId><artifactId>lwjgl3-awt</artifactId><version>${lwjgl3-awt.version}</version></dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <sourceDirs>
                                <source>src/main/java</source>
                                <source>src/main/kotlin</source>
                                <source>src/main/resources</source>
                            </sourceDirs>
                        </configuration>
                    </execution>
                    <execution>
                        <id>test-compile</id>
                        <phase>process-test-sources</phase>
                        <goals>
                            <goal>test-compile</goal>
                        </goals>
                        <configuration>
                            <sourceDirs>
                                <source>src/test/java</source>
                                <source>src/test/kotlin</source>
                                <source>src/test/resources</source>
                            </sourceDirs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <id>default-testCompile</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <id>java-compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>java-test-compile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    
</project>

